// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal 1`] = `
<div>
  <div
    class="modalBg"
  >
    <div
      class="allModal myModal"
    >
      <div
        data-testid="content"
      >
        lorem
      </div>
      <button
        class="btn btn-primary btn-block"
      >
        關閉
      </button>
    </div>
  </div>
</div>
`;

exports[`header 1`] = `
<div>
  <div
    class="modalBg"
  >
    <div
      class="allModal myModal"
    >
      <div
        data-testid="content"
      >
        lorem
      </div>
      <button
        class="btn btn-primary btn-block"
      >
        關閉
      </button>
    </div>
  </div>
</div>
`;

exports[`top + animation 1`] = `
<div>
  <div
    class="modalBg"
  >
    <div
      class="allModal myAnimation myAnimation1"
    >
      <div
        data-testid="content"
      >
        lorem
      </div>
      <button
        class="btn btn-primary btn-block"
      >
        關閉
      </button>
    </div>
  </div>
</div>
`;

exports[`top 1`] = `
<div>
  <div
    class="modalBg"
  >
    <div
      class="allModal myTop"
    >
      <div
        data-testid="content"
      >
        lorem
      </div>
      <button
        class="btn btn-primary btn-block"
      >
        關閉
      </button>
    </div>
  </div>
</div>
`;
